--- a/matsissue.html
+++ b/matsissue.html
@@ -7,7 +7,7 @@
     <title>Så fin text</title>
     <style>
         div {
-            background-color: brown;
+            background-color: lightcoral;
             border: 10px solid yellowgreen;
         }
     </style>
