--- a/redbackground.html
+++ b/redbackground.html
@@ -4,9 +4,9 @@
         <title>Red background</title>
 
         <style>
-            h1 {background-color: red;}
-            h2 {background-color: red;}
-            p {background-color: red;}
+            h1 {background-color: greenyellow;}
+            h2 {background-color: greenyellow;}
+            p {background-color: greenyellow;}
         </style>
     </head>
     <body>
