--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,6 +8,6 @@
     
 </head>
 <body>
-    <h1 style="background-color:  blue;">Hej</h1>
+    <h1 style="background-color:  red;">Hej</h1>
 </body>
 </html>
