--- a/pTagg.html
+++ b/pTagg.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <p>a file with a p tag html file</p>
-    <p>Switched branch</p>
+    <p>Switched branch!</p>
 </body>
 </html>
