--- a/issue#4.html
+++ b/issue#4.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>A random story</h2>
+    <h2 style = "color: red;">A random story</h2>
     <p>A little boy goes to buy some candy.</p>
 </body>
 </html>
